--- a/styles/style.css
+++ b/styles/style.css
@@ -1,289 +1,302 @@
 .box {
-    margin: auto;
-    max-width: 1440px;
+  margin: auto;
+  max-width: 1440px;
 }
+
 .header {
-    margin: 92px 49px 92px 51px;
-    display: grid;
-    grid-template-columns: 1fr 200px 1fr;
-    max-width: 1440px;
-  }
-  
-  .header__menu {
-    padding-top: 43px;
-  }
-  
-  .header__links-list {
-    display: flex;
-    gap: 32px;
-    justify-content: flex-start;
-    list-style: circle;
-    font-size: 18px;
-    min-width: 300px;
-    text-underline-position: under;
-  }
-  
-  .header__link {
-    min-width: 200px;
+  margin: 92px 49px 92px 51px;
+  display: grid;
+  grid-template-columns: 1fr 200px 1fr;
+  max-width: 1440px;
+}
 
-  }
-  
-  .header__list-item-no-bullit {
-    list-style-type: none;
-  }
-  .header__link-header__link-active {
-    text-decoration: none;
-  }
-  .header__logo-image {
-   height: 105px;
-  }
-  .contacts {
-    padding-top: 3px;
-    font-size: 18px;
-    font-style: normal;
-    line-height: 24.3px;
-    justify-self: self-end;
-    max-width: 240px;
-    list-style-type: none;
-  }
-  .telephone {
-    text-decoration: underline;
-    text-underline-position: under;
+.header__menu {
+  padding-top: 43px;
+}
 
-  }
-  .e-mail {
-    text-decoration: underline;
-    text-underline-position: under;
-  }
-  .cover {
-    background: url(../images/cover.jpg) center no-repeat;
-    background-size: cover;
-    position: relative;
-    max-width: 1440px;
-    min-height: 757px;
-  }
-  
-  .overlay {
-    background-color: rgb(0 0 0 / 0.6);
-    z-index: 2;
-    position: absolute;
-    inset: 0;
-  }
-  
-  .cover__title {
-    color: #fff;
-    font-size: 100px;
-    font-weight: bold;
-    letter-spacing: 30px;
-    text-transform: uppercase;
-    position: inherit;
-    z-index: 3;
-    padding: 161px 50px 135px 50px;
-  }
-  
-  .aligned-text {
-    display: inline;
-    letter-spacing: 30px;
-    line-height: 115%;
-  }
-  
-  .aligned-text_center {
-    display: block;
-    line-height: 100%;
-    padding: 20px 30px 20px 0;
-    text-align: center;
-  }
-  
-  .aligned-text_right {
-    display: block;
-    text-align: right;
-    line-height: 100%;
-  }
-  
-  .letter-spacing-extended {
-    letter-spacing: 60px;
-  }
-  
-  .no-letter-spacing {
-    letter-spacing: 0;
-  }
-  
-  .cover__description {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 78px;
-    position: inherit;
-    z-index: 3;
-    padding: 0 50px 60px 0;
-  }
-  
-  .cover__description-text {
-    color: #fff;
-    font-size: 22px;
-    font-weight: normal;
-    line-height: 28px;
-    text-transform: uppercase;
-    word-spacing: 18px;
-  }
-  
-  .bet-button {
-    color: #fff;
-    background-color: transparent;
-    border: 1px solid #fff;
-    width: 257px;
-    font-size: 22px;
-    text-transform: uppercase;
-    padding: 12px 32px;
-  }
-  
-  .bet-button:hover {
-    cursor: pointer;
-  }
-  .lots__heading {
-    font-size: 40px;
-    font-weight: bold;
-    text-transform: uppercase;
-    margin: 175px 0 27px 90px;
-  }
-  
-  .lots__card-list {
-    display: flex;
-    gap: 25px;
-    padding-left: 50px;
-    padding-right: 50px;
-    list-style: none;
-  }
-  
-  .lots__card-list-item {
-    min-height: 450px;
-    width: 430px;
-  }
-  
-  .card {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 50px 40px;
-    z-index: 1;
-    position: relative;
-    height: 100%;
-  }
-  
-  .card-link {
-    text-decoration: none;
-  }
-  
-  .card_type_film {
-    background-image: url(../images/card-lot-01.jpg);
-    background-size: cover;
-  }
-  
-  .card_type_book {
-    background-image: url(../images/card-lot-02.jpg);
-    background-size: cover;
-  }
-  
-  .card_type_picture {
-    background-image: url(../images/card-lot-03.jpg);
-    background-size: cover;
-  }
-  
-  .card__title {
-    color: #fff;
-    font-size: 22px;
-    text-transform: uppercase;
-    text-decoration: underline;
-    font-weight: bold;
-    line-height: 120%;
-    z-index: 3;
-  }
-  
-  .card__text {
-    color: #fff;
-    font-size: 20px;
-    line-height: 120%;
-    z-index: 3;
-  }
-  
-  .lots__look-more-link {
-    font-size: 20px;
-    margin: 30px 0 0 90px;
-    display: block;
-  }
-  
-  .about {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 8px;
-    grid-template-areas:
-      "about__logo about__title about__title"
-      ". about__text about__text";
-    max-width: 1440px;
-    margin-top: 183px;
-    padding-left: 38px;
-  }
-  
-  .about__logo {
-    background-color: #000;
-    width: 240px;
-    height: 240px;
-    display: flex;
-    border-radius: 50%;
-    grid-area: about__logo;
-    align-self: center;
-    justify-self: center;
-  }
-  
-  .about__logo-image {
-    width: 148px;
-    align-items: center;
-    margin: auto;
-  }
-  
-  .about__title {
-    grid-area: about__title;
-    font-size: 40px;
-    text-transform: uppercase;
-    font-weight: bold;
-    align-self: center;
-  }
-  
-  .about__text {
-    grid-area: about__text;
-    font-size: 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-    max-width: 885px;
-  }  
-  .footer {
-    display: flex;
-    justify-content: space-between;
-    padding: 180px 50px 90px;
-    max-width: 1440px;
-  }
-  
-  .footer__menu-list {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .footer__social-list {
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-    gap: 47px;
-  }
-  
-  .footer__menu-list-item {
-    font-size: 18px;
-  }
-  
-  .footer__social-icon {
-    height: 48px;
-    width: 48px;
-  }
+.header__links-list {
+  display: flex;
+  gap: 32px;
+  justify-content: flex-start;
+  list-style: circle;
+  font-size: 18px;
+  min-width: 300px;
+  text-underline-position: under;
+}
+
+.header__link {
+  min-width: 200px;
+}
+
+.header__list-item-no-bullit {
+  list-style-type: none;
+}
+
+.header__link-header__link-active {
+  text-decoration: none;
+}
+
+.header__logo-image {
+  height: 105px;
+}
+
+.contacts {
+  list-style-type: none;
+  padding-top: 3px;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 24.3px;
+  justify-self: self-end;
+  max-width: 240px;
+}
+
+.telephone {
+  text-decoration: underline;
+  text-underline-position: under;
+  list-style-type: none;
+}
+
+.e-mail {
+  text-decoration: underline;
+  text-underline-position: under;
+  list-style-type: none;
+}
+
+.cover {
+  background: url(../images/cover.jpg) center no-repeat;
+  background-size: cover;
+  position: relative;
+  max-width: 1440px;
+  min-height: 757px;
+}
+
+.overlay {
+  background-color: rgb(0 0 0 / 0.6);
+  z-index: 2;
+  position: absolute;
+  inset: 0;
+}
+
+.cover__title {
+  color: #fff;
+  font-size: 100px;
+  font-weight: bold;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+  position: inherit;
+  z-index: 3;
+  padding: 161px 50px 135px 50px;
+}
+
+.aligned-text {
+  display: inline;
+  letter-spacing: 30px;
+  line-height: 115%;
+}
+
+.aligned-text_center {
+  display: block;
+  line-height: 100%;
+  padding: 20px 30px 20px 0;
+  text-align: center;
+}
+
+.aligned-text_right {
+  display: block;
+  text-align: right;
+  line-height: 100%;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+
+.cover__description {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 78px;
+  position: inherit;
+  z-index: 3;
+  padding: 0 50px 60px 0;
+}
+
+.cover__description-text {
+  color: #fff;
+  font-size: 22px;
+  font-weight: normal;
+  line-height: 28px;
+  text-transform: uppercase;
+  word-spacing: 18px;
+}
+
+.bet-button {
+  color: #fff;
+  background-color: transparent;
+  border: 1px solid #fff;
+  width: 257px;
+  font-size: 22px;
+  text-transform: uppercase;
+  padding: 12px 32px;
+}
+
+.bet-button:hover {
+  cursor: pointer;
+}
+
+.lots__heading {
+  font-size: 40px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin: 175px 0 27px 90px;
+}
+
+.lots__card-list {
+  display: flex;
+  gap: 25px;
+  padding-left: 50px;
+  padding-right: 50px;
+  list-style: none;
+}
+
+.lots__card-list-item {
+  flex-wrap: wrap;
+  min-height: 450px;
+  width: 430px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 50px 40px;
+  z-index: 1;
+  position: relative;
+  height: 100%;
+}
+
+.card-link {
+  text-decoration: none;
+}
+
+.card_type_film,
+.card_type_book,
+.card_type_picture {
+  background-size: cover;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
+
+.card__title {
+  color: #fff;
+  font-size: 22px;
+  text-transform: uppercase;
+  text-decoration: underline;
+  font-weight: bold;
+  line-height: 120%;
+  z-index: 3;
+}
+
+.card__text {
+  color: #fff;
+  font-size: 20px;
+  line-height: 120%;
+  z-index: 3;
+}
+
+.lots__look-more-link {
+  font-size: 20px;
+  margin: 30px 0 0 90px;
+  display: block;
+}
+
+.about {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 8px;
+  grid-template-areas:
+    "about__logo about__title about__title"
+    ". about__text about__text";
+  max-width: 1440px;
+  margin-top: 183px;
+  padding-left: 38px;
+}
+
+.about__logo {
+  background-color: #000;
+  width: 240px;
+  height: 240px;
+  display: flex;
+  border-radius: 50%;
+  grid-area: about__logo;
+  align-self: center;
+  justify-self: center;
+}
+
+.about__logo-image {
+  width: 148px;
+  align-items: center;
+  margin: auto;
+}
+
+.about__title {
+  grid-area: about__title;
+  font-size: 40px;
+  text-transform: uppercase;
+  font-weight: bold;
+  align-self: center;
+}
+
+.about__text {
+  grid-area: about__text;
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  max-width: 885px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 180px 50px 90px;
+  max-width: 1440px;
+}
+
+.footer__menu-list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer__social-list {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  gap: 47px;
+}
+
+.footer__menu-list-item {
+  font-size: 18px;
+}
+
+.footer__social-icon {
+  height: 48px;
+  width: 48px;
+}
